<?xml version="1.0"?>
<package format="2">
  <name>cartesian_planner</name>
  <version>0.1.0</version>
  <description>The cartesian_planner package</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>eigen_conversions</depend>
  <depend>trajectory_msgs</depend>

</package>
