<?xml version="1.0"?>
<package format="2">
  <name>cartesian_planning_examples</name>
  <version>0.1.1</version>
  <description>The cartesian_planning_examples package</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>ros_control_boilerplate</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>cartesian_planning_server</depend>

</package>
