<?xml version="1.0"?>
<package format="2">
  <name>cartesian_planning_msgs</name>
  <version>0.1.0</version>
  <description>Messages and service definitions for the cartesian_planning package</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
