<?xml version="1.0"?>
<package format="2">
  <name>cartesian_planning_server</name>
  <version>0.1.1</version>
  <description>ROS Service server for cartesian planning</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cartesian_planner</depend>
  <depend>cartesian_planning_msgs</depend>

</package>
